--- a/qos_capacity.adoc
+++ b/qos_capacity.adoc
@@ -2,10 +2,10 @@
 == Capacity-controller QoS Register Interface
 
 Controllers, such as cache controllers, that support capacity allocation and
-capacity usage monitoring provide a memory-mapped register programming
-interface.
+usage monitoring provide a memory-mapped register programming interface.
 
-.Capacity-Controller QoS register layout
+[[CC_REG]]
+.Capacity-controller QoS register layout
 [width=100%]
 [%header, cols="^3,10,^3, 18, 5"]
 |===
@@ -15,27 +15,29 @@ interface.
                                     control>>                   | Yes
 |16    |`cc_mon_ctr_val`  |8       |<<CC_MCTR, Monitoring
                                     counter value>>             | Yes
-|24    |`cc_alloc_ctl`    |8       |<<CC_ALLOC, Capacity 
+|24    |`cc_alloc_ctl`    |8       |<<CC_ALLOC, Capacity
                                     allocation control >>       | Yes
-|32    |`cc_block_mask`   |`M` * 8 |<<CC_BMASK, Capacity 
+|32    |`cc_block_mask`   |`M` * 8 |<<CC_BMASK, Capacity
                                     block mask >>               | Yes
 |===
 
+The size and offset in <<CC_REG>> are specified in bytes.
+
 The size of the `cc_block_mask` register is determined by the `NCBLKS` field
-of the `cc_capabilities` register.
+of the `cc_capabilities` register but is always a multiple of 8 bytes.
 
 The reset value is 0 for the following registers fields.
 
-* `cc_mon_ctl` - `BUSY` and `STATUS` fields
-* `cc_alloc_ctl` - `BUSY` and `STATUS` fields
+* `cc_mon_ctl` - `BUSY` field
+* `cc_alloc_ctl` - `BUSY` field
 
 The reset value is `UNSPECIFIED` for all other registers and/or fields.
 
 The capacity controllers at reset must allocate all available capacity to `RCID`
 value of 0. When the capacity controller supports capacity allocation per
-access-type, then all available capacity is allocated to each supported
-access-type for `RCID=0`. The capacity allocation for all other `RCID` values
-is `UNSPECIFIED`. The behavior of handling a request with a non-zero `RCID`
+access-type, then all available capacity is shared by all the access-type for
+`RCID=0`. The capacity allocation for all other `RCID` values is `UNSPECIFIED`.
+The capacity controller behavior for handling a request with a non-zero `RCID`
 value before configuring the capacity controller with capacity allocation for
 that `RCID` is `UNSPECIFIED`.
 
@@ -52,9 +54,8 @@ capacity-controller capabilities.
   {bits:  8, name: 'VER'},
   {bits: 16, name: 'NCBLKS'},
   {bits:  1, name: 'FRCID'},
-  {bits: 31, name: 'reserved'},
-  {bits:  8, name: 'custom'},
-], config:{lanes: 4, hspace:1024}}
+  {bits: 39, name: '0'},
+], config:{lanes: 1, hspace:1024}}
 ....
 
 The `VER` field holds the version of the specification implemented by the
@@ -63,7 +64,7 @@ specification and the upper nibble is used to hold the major version of the
 specification. For example, an implementation that supports version 1.0 of the
 specification reports 0x10.
 
-The `NCBLKS` field holds the total number of allocatable capacity blocks in 
+The `NCBLKS` field holds the total number of allocatable capacity blocks in
 the controller. The capacity represented by an allocatable capacity block is
 `UNSPECIFIED`. The capacity controllers support allocating capacity in multiples
 of an allocatable capacity block.
@@ -88,39 +89,40 @@ The `cc_mon_ctl` register is used to control monitoring of capacity usage by a
 [wavedrom, , ]
 ....
 {reg: [
-  {bits:  5, name: 'OP (WARL)'},
-  {bits:  3, name: 'AT (WARL)'},
-  {bits: 12, name: 'MCID (WARL)'},
-  {bits:  8, name: 'EVT_ID (WARL)'},
-  {bits:  1, name: 'ATV (WARL)'},
+  {bits:  5, name: 'OP'},
+  {bits:  3, name: 'AT'},
+  {bits: 12, name: 'MCID'},
+  {bits:  8, name: 'EVT_ID'},
+  {bits:  1, name: 'ATV'},
   {bits:  3, name: 'WPRI'},
-  {bits:  7, name: 'STATUS (RO)'},
-  {bits:  1, name: 'BUSY (RO)'},
+  {bits:  7, name: 'STATUS'},
+  {bits:  1, name: 'BUSY'},
   {bits: 24, name: 'WPRI'},
 ], config:{lanes: 8, hspace:1024}}
 ....
 
 Capacity controllers that support capacity usage monitoring implement a usage
 monitoring counter for each supported `MCID`. The usage monitoring counter may
-be configured to count a monitoring event. When an event matching the event 
-configured for the `MCID` occurs then the monitoring counter is updated. The 
+be configured to count a monitoring event. When an event matching the event
+configured for the `MCID` occurs then the monitoring counter is updated. The
 event matching may optionally be filtered by the access-type.
 
-The `OP` field is used to instruct the controller to perform an operation
-listed in <<CC_MON_OP>>.
+The `OP` is a WARL field is used to instruct the controller to perform an
+operation listed in <<CC_MON_OP>>.
 
-The `EVT_ID` field is used to program the identifier of the event to count in
-the monitoring counter selected by `MCID`. The `AT` field is used to program the
-access-type to count.
+The `EVT_ID` is a WARL field is used to program the identifier of the event to
+count in the monitoring counter selected by `MCID`. The `AT` is a WARL field
+used to program the access-type to count, and its validity is indicated by the
+`ATV` field. When `ATV` is 0, the counter counts requests with all access-types,
+and the `AT` value is ignored.
 
-When the `EVT_ID` for a `MCID` is selected as 0, the counter retains its
-current value but stops counting. When `EVT_ID` is programmed with a non-zero
-and legal value, the counter resets to 0 and starts counting the programmed
-events for requests with matching `MCID` and `AT`(if `ATV` is 1). When `ATV` is 0,
-the counter counts requests with all access-types and the `AT` value is ignored.
+If the `EVT_ID` for a `MCID` is configured as 0, the counter stops counting but
+retains its current value. When `EVT_ID` is programmed with a non-zero and
+legal value, the counter resets to 0 and starts counting matching events for
+requests with matching `MCID` and `AT`(if `ATV` is 1).
 
 A controller that does not support monitoring by access-type may hardwire the
-`ATV` and `AT` fields to 0.
+`ATV` and the `AT` fields to 0.
 
 [[CC_MON_OP]]
 .Usage monitoring operations (`OP`)
@@ -156,12 +158,17 @@ A controller that does not support monitoring by access-type may hardwire the
 | --           | 128-256   | Designated for custom use.
 |===
 
-When the `cc_mon_ctl` is written, the controller may need to perform several
-actions that may not complete synchronously with the write. A write to the
-`cc_mon_ctl` sets the `BUSY` bit to 1 indicating the controller is performing
-the requested operation. When the `BUSY` bit reads 0 the operation is complete
-and the `STATUS` field provides a status value (<<CC_MON_STS>>) of the
-requested operation.
+When the `cc_mon_ctl` register is written, the controller may need to perform
+several actions that may not complete synchronously with the write. A write to
+the `cc_mon_ctl` sets the read-only `BUSY` bit to 1 indicating the controller
+is performing the requested operation. When the `BUSY` bit reads 0, the operation
+is complete, and the read-only `STATUS` field provides a status value
+(<<CC_MON_STS>>) of the requested operation. Values written to the `BUSY` and the
+`STATUS` fields are always ignored. An implementation that can complete the
+operation synchronously with the write may hardwire the `BUSY` bit to 0. The
+state of the `BUSY` bit, when not hardwired to 0, shall only change in response
+to a write to the register. The `STATUS` field remains valid until a subsequent
+write to the `cc_mon_ctl` register.
 
 [[CC_MON_STS]]
 .`cc_mon_ctl.STATUS` field encodings
@@ -179,17 +186,18 @@ requested operation.
 | 64-127  | Designated for custom use.
 |===
 
-Behavior of writes to the `cc_mon_ctl` when `BUSY` is 1 is `UNSPECIFIED`. Some
-implementations may ignore the second write and others may perform the
-operation determined by the second write. Software must verify that `BUSY` is 0
-before writing `cc_mon_ctl`.
+When the `BUSY` bit is set to 1, the behavior of writes to the `cc_mon_ctl` is
+`UNSPECIFIED`. Some implementations may ignore the second write and others may
+perform the operation determined by the second write. To ensure proper
+operation, software must first verify that the `BUSY` bit is 0 before writing
+the `cc_mon_ctl` register.
 
 [[CC_MCTR]]
 === Monitoring counter value (`cc_mon_ctr_val`)
 
 The `cc_mon_ctr_val` is a read-only register that holds a snapshot of the
-counter requested by `READ_COUNTER` operation. When the controller does not
-support capacity usage monitoring the `cc_mon_ctr_val` register is read-only
+counter requested by the `READ_COUNTER` operation. When the controller does not
+support capacity usage monitoring, the `cc_mon_ctr_val` register is read-only
 zero.
 
 .Usage monitoring counter value (`cc_mon_ctr_val`)
@@ -198,13 +206,13 @@ zero.
 {reg: [
   {bits:  63, name: 'CTR'},
   {bits:  1, name: 'INVALID'},
-], config:{lanes: 4, hspace:1024}}
+], config:{lanes: 1, hspace:1024}}
 ....
 
 The counter is valid if the `INVALID` field is 0. The counter may be marked
-`INVALID` if it underflows or the controller for `UNSPECIFIED` reasons determine
-the count to be not valid. The counters marked `INVALID` may become valid in
-future.
+`INVALID` if it underflows or the controller, for `UNSPECIFIED` reasons
+determine the count to be not valid. The counters marked `INVALID` may become
+valid in future.
 
 [NOTE]
 ====
@@ -212,55 +220,68 @@ A counter may underflow when capacity is de-allocated following a reset
 of the counter to 0. This may be due to the `MCID` being reallocated to a new
 workload while the capacity controller still holds capacity allocated by
 the workload to which the `MCID` was previously allocated. The counter value
-should typically stabilize to reflect the usage of the new workload after
-the workload has executed for a short duration following the counter reset.
+should typically stabilize to reflect the capacity usage of the new workload
+after the workload has executed for a short duration following the counter
+reset.
 ====
 
 [NOTE]
 ====
-Some implementations may not store the `MCID` of the request that caused the 
+Some implementations may not store the `MCID` of the request that caused the
 capacity to be allocated with every unit of capacity in the controller to
-optimize on the storage overheads. Such controllers may in turn rely on 
+optimize on the storage overheads. Such controllers may in turn rely on
 statistical sampling to report the capacity usage by tagging only a subset
 of the capacity units.
 
-Techniques such as set-sampling in caches have been shown to provide
-statistically accurate cache occupancy information with a relatively small
-sample size such as 10% cite:[SSAMPLE].
+Set-sampling is a technique commonly used in caches to estimate the cache
+occupancy with a relatively small sample size. The basic idea behind
+set-sampling is to select a subset of the cache sets and monitor only those
+sets. By keeping track of the hits and misses in the monitored sets, it is
+possible to estimate the overall cache occupancy with a high degree of accuracy.
+The size of the subset needed to obtain accurate estimates depends on various
+factors, such as the size of the cache, the cache access patterns, and the
+desired accuracy level. Research cite:[SSAMPLE] has shown that set-sampling can
+provide statistically accurate estimates with a relatively small sample size,
+such as 10% or less, depending on the cache properties and sampling technique
+used.
 
 When the controller has not observed enough samples to provide an accurate
-value in the monitoring counter the controller may report the counter as being
-`INVALID` till more accurate measurements are available.
+value in the monitoring counter, it may report the counter as being `INVALID`
+until more accurate measurements are available. This helps to prevent inaccurate
+or misleading data from being used in capacity planning or other decision-making
+processes.
 ====
 
 [[CC_ALLOC]]
 === Capacity allocation control (`cc_alloc_ctl`)
 
-The `cc_alloc_ctl` register is used to control allocation of capacity to a
-`RCID` per `AT`. If a controller does not support capacity allocation then the
-register is read-only zero. If the controller does not support capacity
-allocation per access-type then the `AT` field is read-only zero.
+The `cc_alloc_ctl` register is used to configure allocation of capacity to an
+`RCID` per access-type (`AT`). The `RCID` and `AT` fields in this register are
+WARL. If a controller does not support capacity allocation then this register is
+read-only zero. If the controller does not support capacity allocation per
+access-type then the `AT` field is read-only zero.
 
 .Capacity allocation control (`cc_alloc_ctl`)
 [wavedrom, , ]
 ....
 {reg: [
-  {bits:  5, name: 'OP (WARL)'},
-  {bits:  3, name: 'AT (WARL)'},
-  {bits: 12, name: 'RCID (WARL)'},
+  {bits:  5, name: 'OP'},
+  {bits:  3, name: 'AT'},
+  {bits: 12, name: 'RCID'},
   {bits: 12, name: 'WPRI'},
-  {bits:  7, name: 'STATUS (RO)'},
-  {bits:  1, name: 'BUSY (RO)'},
+  {bits:  7, name: 'STATUS'},
+  {bits:  1, name: 'BUSY'},
   {bits: 24, name: 'WPRI'},
-], config:{lanes: 8, hspace:1024}}
+], config:{lanes: 1, hspace:1024}}
 ....
 
-The `OP` field is used to instruct the capacity controller to perform an
-operation listed in <<CC_ALLOC_OP>>. The `cc_alloc_ctl` register is used in
-conjunction with the `cc_block_mask` register to perform capacity allocation
-operations. When the requested operation uses the operands configured in
-`cc_block_mask`, software must first program the `cc_block_mask` register with
-the operands for the operation before requesting the operation.
+The `OP` is a WARL field used to instruct the capacity controller to perform an
+operation listed in <<CC_ALLOC_OP>>. Some operations require specifying the capacity
+blocks to operate on. The capacity blocks, in the form of a bitmask, for such
+operations are specified in the `cc_block_mask` register. To request operations that
+need a capacity block mask to be specified, software must first program the
+`cc_block_mask` register and then request the operation using the `cc_alloc_ctl`
+register.
 
 [[CC_ALLOC_OP]]
 .Capacity allocation operations (`OP`)
@@ -269,50 +290,55 @@ the operands for the operation before requesting the operation.
 |===
 |Operation     | Encoding ^| Description
 |--            | 0         | Reserved for future standard use.
-|`CONFIG_LIMIT`| 1         | The `CONFIG_LIMIT` operation is used to establish
-                             a limit for capacity allocation for requests by
-                             `RCID` and of access-type `AT`. The capacity
-                             allocation is specified in `cc_block_mask`
-                             register.
+|`CONFIG_LIMIT`| 1         | The `CONFIG_LIMIT` operation is used to configure
+                             a capacity allocation for requests by `RCID` and of
+                             access-type `AT`. The capacity allocation is specified
+                             in the `cc_block_mask` register.
 |`READ_LIMIT`  | 2         | The `READ_LIMIT` operation is used to read back
-                             the previously configured allocation limits for
-                             requests by `RCID` and of type `AT`. The current
-                             configured allocation limit is written to 
-                             `cc_block_mask` register on completion of the
-                             operation.
+                             the previously configured capacity allocation for
+                             requests by `RCID` and of type `AT`. The configured
+                             allocation is returned as a bit-mask in the
+                             `cc_block_mask` register on successful completion of
+                             the operation.
 |`FLUSH_RCID`  | 3         | The `FLUSH_RCID` operation requests the controller
-                             to deallocate the capacity allocated for use by
-                             the specified `RCID` for access-type specified by
-                             `AT`. The `cc_block_mask` register is not used for
-                             this operation.
+                             to deallocate the capacity used by the specified
+                             `RCID` and access-type `AT`. The `cc_block_mask`
+                             register is not used for this operation. The
+                             configured capacity allocation is not changed by
+                             this operation. This operation is supported if the
+                             `capabilities.FRCID` bit is 1.
 | --           | 4-23      | Reserved for future standard use.
 | --           | 24-31     | Designated for custom use.
 |===
 
-Capacity controllers enumerate the allocatable capacity blocks in `NCBLKS` field
-of the `cc_capabilities` register. The `cc_block_mask` register is programmed
-with a bit-mask where each bit represents a capacity block to be allocated.
+Capacity controllers enumerate the allocatable capacity blocks in the `NCBLKS`
+field of the `cc_capabilities` register. The `cc_block_mask` register is
+programmed with a bit-mask where each bit represents a capacity block for the
+operation.
 
-A capacity allocation must be configured for each supported access-type by 
-the controller. Identical limits may be configured for two or more access-types
-if different capacity allocation per access-type is not required. The behavior
-is `UNSPECIFIED` if capacity is not allocated for each access-type supported by
-the controller.
+A capacity allocation must be configured for each supported access-type by the
+controller. An implementation that does not support capacity allocation per
+access-type may hardwire the `AT` field to 0 and associate use the same capacity
+allocation configuration for requests with all access-types. When capacity
+allocation per access-type is supported, identical limits may be configured for
+two or more access-types if different capacity allocation per access-type is not
+required. If capacity is not allocated for each access-type supported by the
+controller, the behavior is `UNSPECIFIED`.
 
 [NOTE]
 ====
 A cache controller that supports capacity allocation indicates the number of
 allocatable capacity blocks in `cc_capabilities.NCBLKS` field. For example,
-consider a cache with `NCBLKS=8`. In this example, the `RCID=5` has been 
-allocated capacity blocks numbered 0 and 1 for requests with access-type `AT=0`
+let's consider a cache with `NCBLKS=8`. In this example, the `RCID=5` has been
+allocated capacity blocks numbered 0 and 1 for requests with access-type `AT=0`,
 and has been allocated capacity blocks numbered 2 for requests with access-type
 `AT=1`. The `RCID=3` in this example has been allocated capacity blocks
 numbered 3 and 4 for both `AT=0` and `AT=1` access-types as separate capacity
 allocation by access-type is not required for this workload. Further in this
 example, the `RCID=6` has been configured with the same capacity block
 allocations as `RCID=3`. This implies that they share a common capacity
-allocation in this cache but have been associated with different `RCID` to allow
-differentiated treatment in another capacity and/or bandwidth controller.
+allocation in this cache but may have been associated with different `RCID` to
+allow differentiated treatment in another capacity and/or bandwidth controller.
 
 [width=100%]
 [%header, cols="4,^1,^1,^1,^1,^1,^1,^1,^1"]
@@ -327,10 +353,10 @@ differentiated treatment in another capacity and/or bandwidth controller.
 |===
 ====
 
-The `FLUSH_RCID` operation may incur long latency to complete. New requests to
-the controller by the `RCID` being flushed are allowed. The controller is
-allowed to deallocate capacity that was allocated after the operation
-was initiated.
+The `FLUSH_RCID` operation may incur a long latency to complete. New requests to
+the controller by the `RCID` being flushed are allowed. Additionally, the
+controller is allowed to deallocate capacity that was allocated after the
+operation was initiated.
 
 [NOTE]
 ====
@@ -338,22 +364,27 @@ For cache controllers, the `FLUSH_RCID` operation may perfom an operation
 similar to that performed by the RISC-V `CBO.FLUSH` instruction on each cache
 block that is part of the allocation configured for the `RCID`.
 
-The `FLUSH_RCID` operation may be used as part of reclaiming a previously 
+The `FLUSH_RCID` operation can be used as part of reclaiming a previously
 allocated `RCID` and associating it with a new workload. When such a
-reallocation is performed the capacity controllers may have capacity
-allocated by the old workload and thus for a short warmup duration the capacity
-controller may be enforcing capacity limits that reflect the usage by the old
-workload. Such warmup durations are typically not statistically significant but
-if that is not desired then the `FLUSH_RCID` operation may be used to flush and
-evict capacity allocated to the old workload.
+reallocation is performed, the capacity controllers may have capacity allocated
+by the old workload and thus for a short warmup duration the capacity controller
+may be enforcing capacity allocation limits that reflect the usage by the old
+workload. Such warmup durations are typically not statistically significant, but
+if that is not desired, then the `FLUSH_RCID` operation can be used to flush and
+evict capacity allocated by the old workload.
 ====
 
-When the `cc_alloc_ctl` is written, the controller may need to perform several
-actions that may not complete synchronously with the write. A write to the
-`cc_alloc_ctl` sets the `BUSY` bit to 1 indicating the controller is performing
-the requested operation. When the `BUSY` bit reads 0 the operation is complete
-and the `STATUS` field provides a status value (<<CC_ALLOC_STS>>) of the
-requested operation.
+When the `cc_alloc_ctl` register is written, the controller may need to perform
+several actions that may not complete synchronously with the write. A write to
+the `cc_alloc_ctl` sets the read-only `BUSY` bit to 1 indicating the controller
+is performing the requested operation. When the `BUSY` bit reads 0, the operation
+is complete, and the read-only `STATUS` field provides a status value
+(<<CC_ALLOC_STS>>) of the requested operation. Values written to the `BUSY` and
+the `STATUS` fields are always ignored. An implementation that can complete the
+operation synchronously with the write may hardwire the `BUSY` bit to 0. The
+state of the `BUSY` bit, when not hardwired to 0, shall only change in response
+to a write to the register. The `STATUS` field remains valid until a subsequent
+write to the `cc_alloc_ctl` register.
 
 [[CC_ALLOC_STS]]
 .`cc_alloc_ctl.STATUS` field encodings
@@ -371,15 +402,17 @@ requested operation.
 | 64-127  | Designated for custom use.
 |===
 
-Behavior of writes to the `cc_alloc_ctl` or `cc_block_mask` when `BUSY` is 1 is
-`UNSPECIFIED`. Some implementations may ignore the second write and others may
-perform the operation determined by the second write. Software must verify that
-`BUSY` is 0 before writing `cc_alloc_ctl` or `cc_block_mask`.
+When the `BUSY` bit is set to 1, the behavior of writes to the `cc_alloc_ctl`
+register or to the `cc_block_mask` register is `UNSPECIFIED`. Some
+implementations may ignore the second write and others may perform the
+operation determined by the second write. To ensure proper operation, software
+must verify that `BUSY` bit  is 0 before writing the `cc_alloc_ctl` register or
+the `cc_block_mask` register.
 
 [[CC_BMASK]]
 === Capacity block mask (`cc_block_mask`)
 
-The `cc_block_mask` is a WARL register. When the controller does not support
+The `cc_block_mask` is a WARL register. If the controller does not support
 capacity allocation i.e. `NCBLKS` is 0, then this register is read-only 0.
 
 The register has `NCBLKS` <<CC_CAP>> bits each corresponding to one allocatable
@@ -392,29 +425,30 @@ follows. The division operation in this equation is an integer division.
     BMW = \frac{ NCBLKS + 63 }{64} x 64
 ++++
 
-Bits `NCBLKS-1:0` are read-write and the bits `BMW-1:NCBLKS` are read-only zero.
+Bits `NCBLKS-1:0` are read-write, and the bits `BMW-1:NCBLKS` are read-only and
+have a value of 0.
 
-To configure capacity allocation limit for an `RCID` and `AT`, the
-`cc_block_mask` is first programmed with a bit-mask identifying the capacity
-blocks to be allocated and then the `cc_alloc_ctl` register written to request a
-`CONFIG_LIMIT` operation for the `RCID` and `AT`. Once a capacity allocation
-limit has been established, a request may be allocated capacity in a capacity
-block if the capacity block mask programmed for `RCID` and `AT` associated with
-the request has the corresponding bit set to 1 in the capacity block mask. At
-least one capacity block must be allocated using `cc_block_mask` when allocating
-capacity. Allocating overlapping capacity block masks among `RCID` and `AT` is
-allowed.
+The process of configuring capacity allocation for an `RCID` and `AT` begins by
+programming the `cc_block_mask` register with a bit-mask that identifies the
+capacity blocks to be allocated. Next, the `cc_alloc_ctl register` is written to
+request a `CONFIG_LIMIT` operation for the `RCID` and `AT`. Once a capacity
+allocation limit has been established, a request may be allocated capacity in the
+capacity blocks allocated to the `RCID` and `AT` associated with the request. It
+is important to note that at least one capacity block must be allocated using
+`cc_block_mask` when allocating capacity, or else the operation will fail with
+`STATUS=5`. Overlapping capacity block masks among `RCID` and/or `AT` are
+allowed to be configured.
 
 [NOTE]
 ====
 A set-associative cache controller that supports capacity allocation by ways
-may advertize `NCBLKS` to be the number of ways per set in the cache. Allocating
-capacity in such a cache for an `RCID` and `AT` involves selecting a subset of
-ways and programming the mask of the selected ways in `cc_block_mask` when
+can advertise `NCBLKS` as the number of ways per set in the cache. To Allocate
+capacity in such a cache for an `RCID` and `AT`, a subset of ways must be
+selected and mask of the selected ways must be programmed in `cc_block_mask` when
 requesting the `CONFIG_LIMIT` operation.
 ====
 
-To read out the capacity allocation limit for an `RCID` and `AT`, the 
-`READ_LIMIT` operation is requested using `cc_alloc_ctl`. On successful
-completion of the operation the `cc_block_mask` holds the configured capacity
-allocation limit.
+To read the capacity allocation limit for an `RCID` and `AT`, the controller
+provides the `READ_LIMIT` operation which can be requested by writing to the
+`cc_alloc_ctl` register. Upon successful completion of the operation, the
+`cc_block_mask` register holds the configured capacity allocation limit.
