--- a/qos_bandwidth.adoc
+++ b/qos_bandwidth.adoc
@@ -234,14 +234,16 @@ establish an accurate counter value for the monitored event.
 
 The counter provides the bytes transferred by requests matching the `EVT_ID` as
 the requests go past the monitoring point. A bandwidth value may be determined
-by reading the byte count value at two instances of time `T1` and `T2`. If the
+by reading the byte count value at two instances of time `T1` and `T2`, see <<eq-2>>. If the
 value of the counter at time `T1` was `B1` and at time `T2` is `B2` then the
 bandwidth is as follows. The frequency of the time source is
 latexmath:[T_{freq}].
 
-[latexmath]
+[latexmath#eq-2,reftext="equation ({counter:eqs})"]
 ++++
-    Bandwidth = T_{freq} \times \frac{ B2 - B1 }{T2 - T1}
+\begin{equation}
+Bandwidth = T_{freq} \times \frac{ B2 - B1 }{T2 - T1}
+\end{equation}
 ++++
 
 The width of the counter is `UNSPECIFIED`.
@@ -394,11 +396,14 @@ behavior is otherwise well defined.
 When the weight is not 0, the share of unused bandwidth made available to
 `RCID=x` when it contends with another `RCID` that is also allowed to use unused
 bandwidth is determined by the `Mweight` of `RCID=x` divided by the sum of
-`Mweight` of all other contending `RCID`. This ratio `P` is as follows:
+`Mweight` of all other contending `RCID`. This ratio `P` is determined as in
+<<eq-3>>.
 
-[latexmath]
+[latexmath#eq-3,reftext="equation ({counter:eqs})"]
 ++++
-    P = \frac{Mweight_{x}}{\sum_{r=1}^{r=n} Mweight_{r}}
+\begin{equation}
+P = \frac{Mweight_{x}}{\sum_{r=1}^{r=n} Mweight_{r}}
+\end{equation}
 ++++
 
 [NOTE]
