--- a/qos_capacity.adoc
+++ b/qos_capacity.adoc
@@ -415,7 +415,7 @@ the `cc_block_mask` register.
 The `cc_block_mask` is a WARL register. If the controller does not support
 capacity allocation i.e. `NCBLKS` is 0, then this register is read-only 0.
 
-The register has `NCBLKS` <<CC_CAP>> bits each corresponding to one allocatable
+The register has `NCBLKS` bits each corresponding to one allocatable
 capacity block in the controller. The width of this register is variable but
 always a multiple of 64 bits. The bitmap width in bits (`BMW`) is determined in
 <<eq-1>>. The division operation in this equation is an integer division.
