updating iommu cap register to match latest

--- a/qos_iommu.adoc
+++ b/qos_iommu.adoc
@@ -59,10 +59,11 @@ IOMMU.
   {bits: 1, name: 'Sv39x4'},
   {bits: 1, name: 'Sv48x4'},
   {bits: 1, name: 'Sv57x4'},
-  {bits: 2, name: 'reserved'},
+  {bits: 1, name: 'reserved'},
+  {bits: 1, name: 'AMO_MRIF'},
   {bits: 1, name: 'MSI_FLAT'},
   {bits: 1, name: 'MSI_MRIF'},
-  {bits: 1, name: 'AMO'},
+  {bits: 1, name: 'AMO_HWAD'},
   {bits: 1, name: 'ATS'},
   {bits: 1, name: 'T2GPA'},
   {bits: 1, name: 'END'},
